==> ammaramir26/oled-interface-atmega328p/oled.c <==
#include "oled.h"
void i2c_init(void) {
    TWSR = 0x00; // Set pre-scaler bits to zero
    TWBR = 0x62; // 75 kHz for XTAL = 16MHz
    TWCR = 0x04; // Enable the TWI module
}

void i2c_start(void) {
    TWCR = (1 << TWINT) | (1 << TWSTA) | (1 << TWEN);
    while ((TWCR & (1 << TWINT)) == 0);
}

void i2c_stop(void) {
    TWCR = (1 << TWINT) | (1 << TWEN) | (1 << TWSTO);
}

void i2c_write(unsigned char data) {
    TWDR = data;
    TWCR = (1 << TWINT) | (1 << TWEN);
    while ((TWCR & (1 << TWINT)) == 0);
}

void oled_command(char cmnd) {
    i2c_start();
    i2c_write(0x78); // Address + write
    i2c_write(0x00); // Continuation bit 0 +cmnd0
    i2c_write(cmnd);
    i2c_stop();
}

void oled_data(char data) {
    i2c_start();
    i2c_write(0x78); // Address + write
    i2c_write(0x40); // Data at GDDRAM
    i2c_write(data);
    i2c_stop();
}

void init_OLED(void) {
    _delay_ms(100);
    oled_command(0xAE);
    oled_command(0xD5);
    oled_command(0x80);
    oled_command(0xA8);
    oled_command(0x3F);
    oled_command(0xD3);
    oled_command(0x00);
    oled_command(0x40);
    oled_command(0x8D);
    oled_command(0x14);
    oled_command(0x20);
    oled_command(0x00);
    oled_command(0xA1);
    oled_command(0xC8);
    oled_command(0xDA);
    oled_command(0x12);
    oled_command(0x81);
    oled_command(0xCF);
    oled_command(0xD9);
    oled_command(0xF1);
    oled_command(0xDB);
    oled_command(0x40);
    oled_command(0xA4);
    oled_command(0xA6);
    oled_command(0xAF);
}
uint8_t characters[] =
{
    0x00,0x00,0x00,0x00,0x00,0x00, // Space
    0x00,0x00,0x5F,0x00,0x00,0x00, // !
    0x00,0x07,0x00,0x07,0x00,0x00, // "
    0x14,0x7F,0x14,0x7F,0x14,0x00, // #
    0x24,0x2A,0x7F,0x2A,0x12,0x00, // $
    0x23,0x13,0x08,0x64,0x62,0x00, // %
    0x36,0x49,0x55,0x22,0x50,0x00, // &
    0x00,0x05,0x03,0x00,0x00,0x00, // '
    0x00,0x1C,0x22,0x41,0x00,0x00, // (
    0x00,0x41,0x22,0x1C,0x00,0x00, // )
    0x14,0x08,0x3E,0x08,0x14,0x00, // *
    0x08,0x08,0x3E,0x08,0x08,0x00, // +
    0x00,0x50,0x30,0x00,0x00,0x00, // ,
    0x08,0x08,0x08,0x08,0x08,0x00, // -
    0x00,0x60,0x60,0x00,0x00,0x00, // .
    0x20,0x10,0x08,0x04,0x02,0x00, // /
    0x3E,0x51,0x49,0x45,0x3E,0x00, // 0
    0x00,0x42,0x7F,0x40,0x00,0x00, // 1
    0x72,0x49,0x49,0x49,0x46,0x00, // 2
    0x21,0x41,0x45,0x4B,0x31,0x00, // 3
    0x18,0x14,0x12,0x7F,0x10,0x00, // 4
    0x27,0x45,0x45,0x45,0x39,0x00, // 5
    0x3C,0x4A,0x49,0x49,0x30,0x00, // 6
    0x01,0x71,0x09,0x05,0x03,0x00, // 7
    0x36,0x49,0x49,0x49,0x36,0x00, // 8
    0x06,0x49,0x49,0x29,0x1E,0x00, // 9
    0x00,0x36,0x36,0x00,0x00,0x00, // :
    0x00,0x56,0x36,0x00,0x00,0x00, // ;
    0x08,0x14,0x22,0x41,0x00,0x00, // <
    0x14,0x14,0x14,0x14,0x14,0x00, // =
    0x00,0x41,0x22,0x14,0x08,0x00, // >
    0x02,0x01,0x59,0x09,0x06,0x00, // ?
    0x3E,0x41,0x5D,0x55,0x5E,0x00, // @
    0x7C,0x12,0x11,0x12,0x7C,0x00, // A
    0x7F,0x49,0x49,0x49,0x36,0x00, // B
    0x3E,0x41,0x41,0x41,0x22,0x00, // C
    0x7F,0x41,0x41,0x41,0x3E,0x00, // D
    0x7F,0x49,0x49,0x49,0x41,0x00, // E
    0x7F,0x09,0x09,0x09,0x01,0x00, // F
    0x3E,0x41,0x49,0x49,0x7A,0x00, // G
    0x7F,0x08,0x08,0x08,0x7F,0x00, // H
    0x00,0x41,0x7F,0x41,0x00,0x00, // I
    0x20,0x40,0x41,0x3F,0x01,0x00, // J
    0x7F,0x08,0x14,0x22,0x41,0x00, // K
    0x7F,0x40,0x40,0x40,0x40,0x00, // L
    0x7F,0x02,0x1C,0x02,0x7F,0x00, // M
    0x7F,0x04,0x08,0x10,0x7F,0x00, // N
    0x3E,0x41,0x41,0x41,0x3E,0x00, // O
    0x7F,0x09,0x09,0x09,0x06,0x00, // P
    0x3E,0x41,0x51,0x21,0x5E,0x00, // Q
    0x7F,0x09,0x19,0x29,0x46,0x00, // R
    0x46,0x49,0x49,0x49,0x31,0x00, // S
    0x01,0x01,0x7F,0x01,0x01,0x00, // T
    0x3F,0x40,0x40,0x40,0x3F,0x00, // U
    0x1F,0x20,0x40,0x20,0x1F,0x00, // V
    0x3F,0x40,0x3C,0x40,0x3F,0x00, // W
    0x63,0x14,0x08,0x14,0x63,0x00, // X
    0x03,0x04,0x78,0x04,0x03,0x00, // Y
    0x61,0x51,0x49,0x45,0x43,0x00, // Z
    0x00,0x7F,0x41,0x41,0x00,0x00, // [
    0x02,0x04,0x08,0x10,0x20,0x00, // Backslash
    0x00,0x41,0x41,0x7F,0x00,0x00, // ]
    0x04,0x02,0x01,0x02,0x04,0x00, // ^
    0x40,0x40,0x40,0x40,0x40,0x00, // _
    0x00,0x03,0x07,0x00,0x00,0x00, // `
    0x20,0x54,0x54,0x54,0x78,0x00, // a
    0x7F,0x48,0x44,0x44,0x38,0x00, // b
    0x38,0x44,0x44,0x44,0x20,0x00, // c
    0x38,0x44,0x44,0x48,0x7F,0x00, // d
    0x38,0x54,0x54,0x54,0x18,0x00, // e
    0x08,0x7E,0x09,0x01,0x02,0x00, // f
    0x18,0xA4,0xA4,0xA4,0x7C,0x00, // g
    0x7F,0x08,0x04,0x04,0x78,0x00, // h
    0x00,0x44,0x7D,0x40,0x00,0x00, // i
    0x40,0x80,0x80,0x84,0x7D,0x00, // j
    0x7F,0x10,0x28,0x44,0x00,0x00, // k
    0x00,0x41,0x7F,0x40,0x00,0x00, // l
    0x7C,0x04,0x18,0x04,0x78,0x00, // m
    0x7C,0x08,0x04,0x04,0x78,0x00, // n
    0x38,0x44,0x44,0x44,0x38,0x00, // o
    0xFC,0x24,0x24,0x24,0x18,0x00, // p
    0x18,0x24,0x24,0x18,0xFC,0x00, // q
    0x7C,0x08,0x04,0x04,0x08,0x00, // r
    0x48,0x54,0x54,0x54,0x20,0x00, // s
    0x04,0x3F,0x44,0x40,0x20,0x00, // t
    0x3C,0x40,0x40,0x20,0x7C,0x00, // u
    0x1C,0x20,0x40,0x20,0x1C,0x00, // v
    0x3C,0x40,0x30,0x40,0x3C,0x00, // w
    0x44,0x28,0x10,0x28,0x44,0x00, // x
    0x1C,0xA0,0xA0,0x90,0x7C,0x00, // y
    0x44,0x64,0x54,0x4C,0x44,0x00, // z
    0x00,0x08,0x36,0x41,0x00,0x00, // {
    0x00,0x00,0x7F,0x00,0x00,0x00, // |
    0x00,0x41,0x36,0x08,0x00,0x00, // }
    0x08,0x08,0x2A,0x1C,0x08,0x00, // ->
    0x08,0x1C,0x2A,0x08,0x08,0x00  // <-
};
void oled_print_char(char c) {
     uint8_t i;
    for (i = 0; i < 6; i++) {
        oled_data(characters[(c - 32) * 6 + i]);
    }
}

void oled_print(char *str) {
    while (*str) {
        oled_print_char(*str++);
    }
}

void oled_clear(void)
{
    uint8_t page;
    for ( page = 0; page < 8; page++)
    {
        oled_command(0xB0 + page);    // Set page address
        oled_command(0x00);           // Set lower column address
        oled_command(0x10);           //higher column address
        uint8_t column;
        for (column = 0; column < 128; column++)
    {
            oled_data(0x00);         //blank
    }
}
}
void oled_setcursor(uint8_t row, uint8_t col) {
    // Page address (0-7 for 128x64 displays)
// Column address (0-127 for 128x64 displays)(segments)
    oled_command(0xB0 | row);  // 0xB0 is the base address for page 0.
    oled_command(0x00 | (col& 0x0F));
    oled_command(0x10 | (col >> 4));
}
void oled_horizontalscroll(uint16_t frames,bool direction) //frames/speeed 2,3,4,5,25,64,128,256 ______direction(0,1)=(right,left)
{
switch (direction)
{case 0:
    oled_command(0x26);
    break;
case 1:
    oled_command(0x27);
    break;
}
oled_command(0x00);
oled_command(0b000);
switch (frames)
{case 2:
oled_command(0b111);
break;
case 3:
    oled_command(0b100);
    break;
case 4:
        oled_command(0b101);
        break;
case 5:
        oled_command(0b000);
        break;
case 25:
        oled_command(0b110);
        break;
 case 64:
        oled_command(0b001);
        break;
 case 128:
        oled_command(0b010);
        break;
 case 256:
        oled_command(0b011);
        break;

}
oled_command(0b111);
oled_command(0x00);
oled_command(0xFF);
oled_command(0x2F);
}
void oled_verticalscroll(uint16_t frames,bool direction)//frames/speeed 2,3,4,5,25,64,128,256 ______direction(0,1)=(right,left)
{
    switch (direction)
{case 0:
    oled_command(0x29);
    break;
case 1:
    oled_command(0x2A);
    break;
}
oled_command(0x00);
oled_command(0b000);
switch (frames)
{case 2:
oled_command(0b111);
break;
case 3:
    oled_command(0b100);
    break;
case 4:
        oled_command(0b101);
        break;
case 5:
        oled_command(0b000);
        break;
case 25:
        oled_command(0b110);
        break;
 case 64:
        oled_command(0b001);
        break;
 case 128:
        oled_command(0b010);
        break;
 case 256:
        oled_command(0b011);
        break;
}
oled_command(0b011);
oled_command(0x3F);
oled_command(0x2F);
}
void change_background(bool a) //inverse display (black background or white)
{
switch (a)
{case 0:
    oled_command(0xA6);
    break;
case 1:
    oled_command(0xA7);
    break;
}
}
